{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 21,
  "lineage": "c86b44c3-85d4-4b1c-5a28-4368630f8271",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "master_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.198.35.87",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-20T19:26:23.493-07:00",
            "id": "projects/fit5225-cloudeco/regions/us-central1/addresses/k8s-master-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "k8s-master-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "fit5225-cloudeco",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-central1/addresses/k8s-master-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "worker1_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "136.115.247.208",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-20T19:26:23.329-07:00",
            "id": "projects/fit5225-cloudeco/regions/us-central1/addresses/k8s-worker1-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "k8s-worker1-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "fit5225-cloudeco",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-central1/addresses/k8s-worker1-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "worker2_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.10.30.0",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-20T19:26:23.454-07:00",
            "id": "projects/fit5225-cloudeco/regions/us-central1/addresses/k8s-worker2-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "k8s-worker2-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "fit5225-cloudeco",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-central1/addresses/k8s-worker2-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8000",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-20T19:26:22.330-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fit5225-cloudeco/global/firewalls/allow-app",
            "log_config": [],
            "name": "allow-app",
            "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
            "priority": 1000,
            "project": "fit5225-cloudeco",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/firewalls/allow-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-04-20T19:26:22.324-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fit5225-cloudeco/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
            "priority": 1000,
            "project": "fit5225-cloudeco",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/firewalls/allow-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k8s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-20T19:26:22.291-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fit5225-cloudeco/global/firewalls/allow-k8s-api",
            "log_config": [],
            "name": "allow-k8s-api",
            "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
            "priority": 1000,
            "project": "fit5225-cloudeco",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/firewalls/allow-k8s-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-20T19:26:22.303-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fit5225-cloudeco/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
            "priority": 1000,
            "project": "fit5225-cloudeco",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260414",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 25,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/us-central1-f/disks/k8s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fit5225-cloudeco/zones/us-central1-f/instances/k8s-master",
            "instance_id": "1653793713203929027",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC7a28/J21T+F6xfmrLtFq4yBLsQ5dKgvPz2aKP4HQ03q6mVL+BIKa0jt+rwZO/ZHYuWKlL4eZNpZl4F4rpfiWiZ/iAIg6RU5Pfa8o9GeIQLypSHO7FqStYjNiW6f/z582ynhanM+YqbzUN+59PPM02wgaAFuxxj84RjwQ+WkOCzP4P+7t94+Nx/F6sMrgByUMvCvBgd8zGloKDpFZtyG6URFfw+CcDGNCkb77RpvDuNzcQAJdez6jKlMhPjJsyLFlbVSlhKSxJ3JS44yG3DsDpf9U53lqRFtsufZiyrwCMByxZqSVSdzoPOGzsHxeeYPj9hPXWyMnf7j1IT4WAo5ibDyH2x5wL6FLPxBwgxJqBnE1rwVCSXpi0DPI7k+GBkNz5TRaYIfOJ7SgnIiVd8UkcjlVjXFNauaaOn2Yea841aO [...]
            },
            "metadata_fingerprint": "dxTQA6K1LuA=",
            "name": "k8s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.198.35.87",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
                "network_ip": "10.128.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-central1/subnetworks/default",
                "subnetwork_project": "fit5225-cloudeco"
              }
            ],
            "project": "fit5225-cloudeco",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/us-central1-f/instances/k8s-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "zone": "us-central1-f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.master_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_worker1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260414",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 25,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/us-central1-f/disks/k8s-worker1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fit5225-cloudeco/zones/us-central1-f/instances/k8s-worker1",
            "instance_id": "1845184787422863300",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC7a28/J21T+F6xfmrLtFq4yBLsQ5dKgvPz2aKP4HQ03q6mVL+BIKa0jt+rwZO/ZHYuWKlL4eZNpZl4F4rpfiWiZ/iAIg6RU5Pfa8o9GeIQLypSHO7FqStYjNiW6f/z582ynhanM+YqbzUN+59PPM02wgaAFuxxj84RjwQ+WkOCzP4P+7t94+Nx/F6sMrgByUMvCvBgd8zGloKDpFZtyG6URFfw+CcDGNCkb77RpvDuNzcQAJdez6jKlMhPjJsyLFlbVSlhKSxJ3JS44yG3DsDpf9U53lqRFtsufZiyrwCMByxZqSVSdzoPOGzsHxeeYPj9hPXWyMnf7j1IT4WAo5ibDyH2x5wL6FLPxBwgxJqBnE1rwVCSXpi0DPI7k+GBkNz5TRaYIfOJ7SgnIiVd8UkcjlVjXFNauaaOn2Yea841aO [...]
            },
            "metadata_fingerprint": "dxTQA6K1LuA=",
            "name": "k8s-worker1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.115.247.208",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
                "network_ip": "10.128.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-central1/subnetworks/default",
                "subnetwork_project": "fit5225-cloudeco"
              }
            ],
            "project": "fit5225-cloudeco",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/us-central1-f/instances/k8s-worker1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "zone": "us-central1-f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.worker1_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_worker2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260414",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 25,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/us-central1-f/disks/k8s-worker2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fit5225-cloudeco/zones/us-central1-f/instances/k8s-worker2",
            "instance_id": "7825724089071001539",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC7a28/J21T+F6xfmrLtFq4yBLsQ5dKgvPz2aKP4HQ03q6mVL+BIKa0jt+rwZO/ZHYuWKlL4eZNpZl4F4rpfiWiZ/iAIg6RU5Pfa8o9GeIQLypSHO7FqStYjNiW6f/z582ynhanM+YqbzUN+59PPM02wgaAFuxxj84RjwQ+WkOCzP4P+7t94+Nx/F6sMrgByUMvCvBgd8zGloKDpFZtyG6URFfw+CcDGNCkb77RpvDuNzcQAJdez6jKlMhPjJsyLFlbVSlhKSxJ3JS44yG3DsDpf9U53lqRFtsufZiyrwCMByxZqSVSdzoPOGzsHxeeYPj9hPXWyMnf7j1IT4WAo5ibDyH2x5wL6FLPxBwgxJqBnE1rwVCSXpi0DPI7k+GBkNz5TRaYIfOJ7SgnIiVd8UkcjlVjXFNauaaOn2Yea841aO [...]
            },
            "metadata_fingerprint": "dxTQA6K1LuA=",
            "name": "k8s-worker2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.10.30.0",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
                "network_ip": "10.128.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-central1/subnetworks/default",
                "subnetwork_project": "fit5225-cloudeco"
              }
            ],
            "project": "fit5225-cloudeco",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/us-central1-f/instances/k8s-worker2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "zone": "us-central1-f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.worker2_ip"
          ]
        }
      ]
    }
  ]
}